--- a/sequoia/pom.xml
+++ b/sequoia/pom.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>nl.buildforce.odata4-jpa</groupId>
-    <artifactId>OData4-jpa-parent</artifactId>
-    <version>0.0.1</version>
-  </parent>
+    <parent>
+        <groupId>nl.buildforce.odata4-jpa</groupId>
+        <artifactId>OData4-jpa-parent</artifactId>
+        <version>0.0.1</version>
+    </parent>
 
     <groupId>nl.buildforce.sequoia</groupId>
     <artifactId>Sequoia-parent</artifactId>
@@ -104,7 +103,7 @@
             <id>build.quality</id>
             <properties>
                 <cobertura.skip>false</cobertura.skip>
-                <exclude.regex />
+                <exclude.regex/>
             </properties>
         </profile>
     </profiles>
