--- a/sequoia/odata4-jpa-coverage/pom.xml
+++ b/sequoia/odata4-jpa-coverage/pom.xml
@@ -1,66 +1,67 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>nl.buildforce.sequoia</groupId>
-		<artifactId>Sequoia-parent</artifactId>
-		<version>0.0.1</version>
-	</parent>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>nl.buildforce.sequoia</groupId>
+        <artifactId>Sequoia-parent</artifactId>
+        <version>0.0.1</version>
+    </parent>
 
-	<artifactId>odata4-jpa-coverage</artifactId>
-	<name>odata4-jpa-coverage</name>
+    <artifactId>odata4-jpa-coverage</artifactId>
+    <name>odata4-jpa-coverage</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-annotation</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-metadata</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-processor</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-annotation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-metadata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-processor</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report-aggregate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.eluder.coveralls</groupId>
-				<artifactId>coveralls-maven-plugin</artifactId>
-				<version>${coveralls.version}</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>${coveralls.version}</version>
 
-			</plugin>
-		</plugins>
-	</build>
-	<packaging>pom</packaging>
-<!--	<distributionManagement>
-		<repository>
-			<id>internal</id>
-			<url>file://${project.build.directory}/mvn-repo</url>
-		</repository>
-	</distributionManagement>-->
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>pom</packaging>
+    <!--	<distributionManagement>
+            <repository>
+                <id>internal</id>
+                <url>file://${project.build.directory}/mvn-repo</url>
+            </repository>
+        </distributionManagement>-->
 </project>
