--- a/sequoia/pom.xml
+++ b/sequoia/pom.xml
@@ -87,6 +87,14 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>${coveralls.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
