--- a/sequoia/pom.xml
+++ b/sequoia/pom.xml
@@ -35,7 +35,7 @@
         <coveralls.version>4.3.0</coveralls.version>
         <derby.version>10.15.2.0</derby.version>
         <eclipselink.version>3.0.0</eclipselink.version>
-        <jacoco.version>0.8.5</jacoco.version>
+        <jacoco.version>0.8.6</jacoco.version>
         <jakarta.persistence.api>3.0.0</jakarta.persistence.api>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <odata.version>0.0.1</odata.version>
@@ -46,8 +46,12 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
+                    <version>3.0.0-M5</version>
                     <configuration>
+<!--
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+-->
                         <properties>
                             <!--<configurationParameters>junit.platform.output.capture.stdout = false</configurationParameters>-->
                         </properties>
