--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -38,7 +38,7 @@
     <properties>
         <commons.codec.version>1.15</commons.codec.version>
         <commons.io.version>2.8.0</commons.io.version>
-        <maven.bundle.plugin.version>2.5.3</maven.bundle.plugin.version>
+        <maven.bundle.plugin.version>5.1.1</maven.bundle.plugin.version>
         <maven.plugin.api.version>3.6.3</maven.plugin.api.version>
         <maven.plugin.tools.version>3.6.0</maven.plugin.tools.version>
     </properties>
@@ -122,16 +122,16 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
                 </plugin>
-<!--
+
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>3.0.0-M5</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>3.0.0-M5</version>
                 </plugin>
--->
+
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>2.6</version>
@@ -192,6 +192,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <runOrder>alphabetical</runOrder>
