--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -91,10 +91,10 @@
                 <version>4.13.1</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
+           <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>2.0.2-beta</version>
+                <artifactId>mockito-core</artifactId>
+                <version>3.7.7</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
