--- a/sequoia/odata4-jpa-test/pom.xml
+++ b/sequoia/odata4-jpa-test/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>7.5.2</version>
+            <version>7.5.4</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.7.1</version>
+            <version>5.8.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.7.7</version>
+            <version>3.8.0</version>
         </dependency>
         <dependency>
             <groupId>jakarta.persistence</groupId>
