--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
+    <name>OData4 JPA Project root</name>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
