--- a/sequoia/odata4-jpa-annotation/pom.xml
+++ b/sequoia/odata4-jpa-annotation/pom.xml
@@ -7,8 +7,9 @@
         <artifactId>Sequoia-parent</artifactId>
         <version>0.0.1</version>
     </parent>
+
     <artifactId>odata4-jpa-annotation</artifactId>
-    <name>odata4-jpa-annotation</name>
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
