--- a/sequoia/odata4-jpa-metadata/pom.xml
+++ b/sequoia/odata4-jpa-metadata/pom.xml
@@ -8,8 +8,8 @@
     </parent>
 
     <artifactId>odata4-jpa-metadata</artifactId>
+    <name>${project.artifactId}</name>
 
-    <name>odata4-jpa-metadata</name>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
