--- a/sequoia/odata4-jpa-test/pom.xml
+++ b/sequoia/odata4-jpa-test/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.1</version>
     </parent>
     <artifactId>odata4-jpa-test</artifactId>
-    <name>odata4-jpa-test</name>
+    <name>${project.artifactId}</name>
     <packaging>jar</packaging>
 
     <dependencies>
