--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
-    <name>OData4 JPA Project root</name>
+    <name>Root OData4 JPA Project</name>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
@@ -16,7 +16,7 @@
         <jackson.version>2.12.1</jackson.version>
         <jakarta-servlet.version>5.0.0</jakarta-servlet.version>
         <odata4-jpa.version>0.0.1</odata4-jpa.version>
-        <project.build.source>14</project.build.source>
+        <project.build.source>15</project.build.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
