--- a/sequoia/odata4-jpa-annotation/pom.xml
+++ b/sequoia/odata4-jpa-annotation/pom.xml
@@ -5,17 +5,18 @@
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
         <artifactId>Sequoia-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>odata4-jpa-annotation</artifactId>
     <name>${project.artifactId}</name>
+    <version>0.0.2</version>
 
     <dependencies>
         <dependency>
             <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-commons-api</artifactId>
-            <version>${odata.version}</version>
+            <version>${odata4-jpa.version}</version>
         </dependency>
 
         <dependency>
