--- a/sequoia/odata4-jpa-metadata/pom.xml
+++ b/sequoia/odata4-jpa-metadata/pom.xml
@@ -4,11 +4,13 @@
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
         <artifactId>Sequoia-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
 
     <artifactId>odata4-jpa-metadata</artifactId>
     <name>${project.artifactId}</name>
+    <version>0.0.2</version>
+
 
     <dependencies>
         <dependency>
@@ -54,7 +56,7 @@
         <dependency>
             <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-server-api</artifactId>
-            <version>${odata.version}</version>
+            <version>${odata4-jpa.version}</version>
         </dependency>
 
         <dependency>
