--- a/sequoia/odata4-jpa-test/pom.xml
+++ b/sequoia/odata4-jpa-test/pom.xml
@@ -4,11 +4,12 @@
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
         <artifactId>Sequoia-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2</version>
     </parent>
     <artifactId>odata4-jpa-test</artifactId>
     <name>${project.artifactId}</name>
     <packaging>jar</packaging>
+    <version>0.0.2</version>
 
     <dependencies>
         <dependency>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>7.5.4</version>
+            <version>7.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -56,7 +57,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
