feat: Unused methods commented out 02.

--- a/sequoia/odata4-jpa-processor/src/main/resources/processor-exceptions-i18n.properties
+++ b/sequoia/odata4-jpa-processor/src/main/resources/processor-exceptions-i18n.properties
@@ -34,19 +34,19 @@ ODataJPAProcessorException.GETTER_NOT_FOUND = No getter found with name '%1$s' a
 ODataJPAProcessorException.BEFORE_IMAGE_MERGED = A before image was merged. This is not allowed.
 
 ODataJPAQueryException.QUERY_PREPARATION_ERROR = A metadata error occurred during query preparation
-ODataJPAQueryException.QUERY_RESULT_CONV_ERROR = A metadata error occurred during query result conversion
-ODataJPAQueryException.QUERY_RESULT_CONV_MISSING_GETTER = Getter for attribute '%1$s' of entity '%2$s' not found, which is required if an embeddable is used a collection attribute
+# ODataJPAQueryException.QUERY_RESULT_CONV_ERROR = A metadata error occurred during query result conversion
+# ODataJPAQueryException.QUERY_RESULT_CONV_MISSING_GETTER = Getter for attribute '%1$s' of entity '%2$s' not found, which is required if an embeddable is used a collection attribute
 ODataJPAQueryException.QUERY_RESULT_ENTITY_SET_ERROR = Entity Set not found for '%1$s'
 ODataJPAQueryException.QUERY_RESULT_ENTITY_TYPE_ERROR = Entity Type not found for '%1$s'
 ODataJPAQueryException.QUERY_RESULT_NAVI_PROPERTY_ERROR  = Navigation property not found for '%1$s'
 ODataJPAQueryException.QUERY_RESULT_NAVI_PROPERTY_UNKNOWN  = Navigation property  '%1$s' not found
-ODataJPAQueryException.QUERY_RESULT_KEY_PROPERTY_ERROR = Key not found for '%1$s'
+# ODataJPAQueryException.QUERY_RESULT_KEY_PROPERTY_ERROR = Key not found for '%1$s'
 ODataJPAQueryException.QUERY_RESULT_ACCESS_NOT_FOUND = Access method for attribute '%1$s' not found, getter missing
 ODataJPAQueryException.QUERY_RESULT_EXPAND_ERROR = Double execution of $expand
 ODataJPAQueryException.QUERY_PREPARATION_FILTER_ERROR = Unable to parse filter expression
-ODataJPAQueryException.QUERY_PREPARATION_ENTITY_UNKNOWN = Entity Type '%1$s' unknown
+# ODataJPAQueryException.QUERY_PREPARATION_ENTITY_UNKNOWN = Entity Type '%1$s' unknown
 ODataJPAQueryException.QUERY_PREPARATION_INVALID_VALUE = '%1$s' is not a valid value for '%2$s'
-ODataJPAQueryException.QUERY_PREPARATION_INVALID_KEY_PAIR = Key pair could not be created min larger than max
+# ODataJPAQueryException.QUERY_PREPARATION_INVALID_KEY_PAIR = Key pair could not be created min larger than max
 ODataJPAQueryException.QUERY_PREPARATION_JOIN_NOT_DEFINED = No Join conditions where provided to create sub-query '%1$s' for '%2$s'
 ODataJPAQueryException.QUERY_PREPARATION_NOT_IMPLEMENTED = The requested service e.g. 'any' or 'all' is not implemented for '%1$s'
 
@@ -69,4 +69,4 @@ ODataJPAUtilException.UNKNOWN_ENTITY_TYPE = Unknown entity type
 ODataJPADBAdaptorException.PARAMETER_MISSING = Parameter '%1$s' not found
 ODataJPADBAdaptorException.NOT_SUPPORTED_SEARCH = Search not supported
 ODataJPADBAdaptorException.PARAMETER_CONVERSION_ERROR = Unable to convert value '%1$s' of parameter '%2$s'
-ODataJPADBAdaptorException.WRONG_NO_KEY_PROP = Wrong number of key properties
+#ODataJPADBAdaptorException.WRONG_NO_KEY_PROP = Wrong number of key properties
