feat: Unused methods commented out 04. Tests passed & smoked tested.

--- a/olingo/commons-api/pom.xml
+++ b/olingo/commons-api/pom.xml
@@ -21,9 +21,25 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+             <version>30.1-jre</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${project.build.source}</source>
+                    <target>${project.build.source}</target>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -36,6 +52,7 @@
                     </instructions>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
