--- a/olingo/server-core/pom.xml
+++ b/olingo/server-core/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+
+        <dependency>
             <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-commons-core</artifactId>
             <version>${project.version}</version>
