feat: Improvements on Java Code Quality 04. Test passed, smoke tested. DescriptionAssoziation stuff removed.

--- a/sequoia/odata4-jpa-metadata/src/main/resources/metadata-exceptions-i18n.properties
+++ b/sequoia/odata4-jpa-metadata/src/main/resources/metadata-exceptions-i18n.properties
@@ -45,9 +45,9 @@ ODataJPAModelException.NOT_SUPPORTED_MIXED_PART_OF_GROUP = Two sets of groups ha
 ODataJPAModelException.COMPLEX_PROPERTY_MISSING_PROTECTION_PATH = Annotation EdmProtctedBy found at '%2$s' of '%1$s'. As '%1$s' is embedded a 'path' to an attributes is required.
 ODataJPAModelException.COMPLEX_PROPERTY_WRONG_PROTECTION_PATH = Annotation EdmProtctedBy found at '%2$s' of '%1$s', but the given 'path' '%3$s' could not be resolved.
 
-ODataJPAModelException.DESCRIPTION_LOCALE_FIELD_MISSING = EdmDescriptionAssociation: At least one of the fields languageAttribute or localeAttribute must be filled at '%1$s - %2$s'
-ODataJPAModelException.DESCRIPTION_ANNOTATION_MISSING = EdmDescriptionAssociation: Annotation not found at '%1$s - %2$s'
-ODataJPAModelException.DESCRIPTION_FIELD_WRONG_TYPE =  EdmDescriptionAssociation: Description field shall be a String
+#ODataJPAModelException.DESCRIPTION_LOCALE_FIELD_MISSING = EdmDescriptionAssociation: At least one of the fields languageAttribute or localeAttribute must be filled at '%1$s - %2$s'
+#ODataJPAModelException.DESCRIPTION_ANNOTATION_MISSING = EdmDescriptionAssociation: Annotation not found at '%1$s - %2$s'
+#ODataJPAModelException.DESCRIPTION_FIELD_WRONG_TYPE =  EdmDescriptionAssociation: Description field shall be a String
 
 ODataJPAModelException.PROPERTY_DEFAULT_ERROR = Error when determining default of '%1$s'
 ODataJPAModelException.NAVI_PROPERTY_NOT_FOUND = Could not determine the target for navigation property '%1$s' of type '%2$s'
