--- a/sequoia/odata4-jpa-processor/src/main/resources/processor-exceptions-i18n.properties
+++ b/sequoia/odata4-jpa-processor/src/main/resources/processor-exceptions-i18n.properties
@@ -44,8 +44,11 @@ ODataJPAQueryException.QUERY_RESULT_NAVI_PROPERTY_UNKNOWN  = Navigation property
 ODataJPAQueryException.QUERY_RESULT_ACCESS_NOT_FOUND = Access method for attribute '%1$s' not found, getter missing
 ODataJPAQueryException.QUERY_RESULT_EXPAND_ERROR = Double execution of $expand
 ODataJPAQueryException.QUERY_PREPARATION_FILTER_ERROR = Unable to parse filter expression
+#ODataJPAQueryException.QUERY_PREPARATION_INVALID_SELECTION_PATH = Based on the given navigation and selection properties no valid selection could be generated
+
 # ODataJPAQueryException.QUERY_PREPARATION_ENTITY_UNKNOWN = Entity Type '%1$s' unknown
 ODataJPAQueryException.QUERY_PREPARATION_INVALID_VALUE = '%1$s' is not a valid value for '%2$s'
+
 # ODataJPAQueryException.QUERY_PREPARATION_INVALID_KEY_PAIR = Key pair could not be created min larger than max
 ODataJPAQueryException.QUERY_PREPARATION_JOIN_NOT_DEFINED = No Join conditions where provided to create sub-query '%1$s' for '%2$s'
 ODataJPAQueryException.QUERY_PREPARATION_NOT_IMPLEMENTED = The requested service e.g. 'any' or 'all' is not implemented for '%1$s'
