feat: Improvements on Java Code Quality 05. Test passed, smoke tested.

--- a/olingo/server-api/pom.xml
+++ b/olingo/server-api/pom.xml
@@ -56,8 +56,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
-                            nl.buildforce.olingo.server.api*,
-                            nl.buildforce.olingo.netty.server.api*
+                            nl.buildforce.olingo.server.api*
                         </Export-Package>
                         <Import-Package>
                             *
