--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -4,12 +4,12 @@
 
     <parent>
         <groupId>nl.buildforce.odata4-jpa</groupId>
-        <artifactId>OData4-jpa-parent</artifactId>
+        <artifactId>odata4-jpa-parent</artifactId>
         <version>0.0.4</version>
     </parent>
 
     <groupId>nl.buildforce.olingo</groupId>
-    <artifactId>Olingo-parent</artifactId>
+    <artifactId>olingo-parent</artifactId>
     <version>0.0.4</version>
     <packaging>pom</packaging>
     <name>Olingo-ODataV4 CapSelUI5</name>
@@ -31,9 +31,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-serioussoftware-repo</id>
-            <name>serioussoftware-maven3</name>
-            <url>https://api.bintray.com/maven/serioussoftware/repo1/OData4-JPA/;publish=1</url>
+            <id>github</id>
+            <name>GitHub Buildforce Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Buildforce/Olingo-odata4-jpa-processor</url>
         </repository>
     </distributionManagement>
 
