--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>nl.buildforce.odata4-jpa</groupId>
-    <artifactId>OData4-jpa-parent</artifactId>
+    <artifactId>odata4-jpa-parent</artifactId>
     <name>Root OData4 JPA Project</name>
     <version>0.0.4</version>
     <packaging>pom</packaging>
@@ -57,9 +57,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-serioussoftware-repo</id>
-            <name>serioussoftware-maven3</name>
-            <url>https://api.bintray.com/maven/serioussoftware/repo1/OData4-JPA/;publish=1</url>
+            <id>github</id>
+            <name>GitHub Buildforce Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Buildforce/Olingo-odata4-jpa-processor</url>
         </repository>
     </distributionManagement>
 </project>
