--- a/sequoia/odata4-jpa-processor/pom.xml
+++ b/sequoia/odata4-jpa-processor/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
-        <artifactId>Sequoia-parent</artifactId>
+        <artifactId>sequoia-parent</artifactId>
         <version>0.0.4</version>
     </parent>
 
