Added TDD methods:
"TDD for GetUTCDateTime OData Function request
- param ICCID,SerialNr
- response UTCDateTime"

"TDD for CardValidation
- param Card ID,ICCID,SerialNr
- response evaluationCode,expirationDate,encryptedPassword,name
"
"TDD for CardValidationWCredintentials
- param ICCID,SerialNr
- response token"

"TDD for WorkedHoursDeclaration
- param Card ID,ICCID,SerialNr,Worked-Minutes
- response expirationDate"

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </modules>
     <properties>
         <jackson.version>2.12.3</jackson.version>
+        <json.version>20210307</json.version>
         <jakarta-servlet.version>5.0.0</jakarta-servlet.version>
         <odata4-jpa.version>0.0.4</odata4-jpa.version>
         <project.build.source>14</project.build.source>
